--- a/Assets/css/mediaquery.css
+++ b/Assets/css/mediaquery.css
@@ -2,12 +2,16 @@
   nav {
     display: none;
   }
+  header{
+    background-position: center bottom;
+  }
   header .navbar {
     margin: 0;
     padding: 0;
   }
   header button .uil {
     font-size: 2rem;
+    
   }
   .navbar {
     position: fixed;
@@ -17,6 +21,10 @@
     display: block;
     cursor: pointer;
   }
+  .navbar a:hover{
+ color: rgba(126, 252, 0, 0.308);
+ transition: all 1s ease-in-out;
+}
   header .navbar button {
     background-color: #fff;
     border: none;
@@ -58,10 +66,12 @@
   .section2 {
     height: 170rem;
   }
-  .section1 li {
-    /* padding: 0 1rem; */
+  .section1 li a{
+    font-size: 0.8rem;
+    
   }
-  .section1 ul {
+  
+  .section1 ul  {
     width: 100%;
   }
   .section1 .grids {
@@ -82,12 +92,12 @@
   }
 
   .section3 .imgdiv {
-    width: 100%;
-    height: 350px;
+    width: 90%;
+    height: 300px;
     background-position: center 5px;
   }
   .section3 .textdiv {
-    width: 100%;
+    width: 90%;
   }
   .section4 {
     width: 90%;
@@ -101,13 +111,17 @@
   }
   .section4 .text-con {
     height: 220px;
+    width: 70%;
   }
   .section5 .flexitems {
     flex-direction: column;
     gap: 2rem;
   }
   .section5 .items {
-    width: 100%;
+    width: 90%;
+  }
+  .section5 .items a {
+    padding-bottom: 1rem;
   }
   .section6 .flexitems {
     flex-direction: column;
@@ -138,8 +152,13 @@
   footer {
     width: 90%;
     margin: auto;
+    padding-top: 5rem;
   }
   footer div {
     width: 100%;
   }
+  footer .uil {
+  font-size: 1.5rem;
+  padding: 0.5rem;
+}
 }
