--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -16,7 +16,7 @@ body {
 header {
   background-image: url("../images/pexels-pablo-ezequiel-nieva-933807-3179911.jpg");
   background-size: cover;
-  background-position: center -100px;
+  background-attachment: fixed;
   width: 100%;
   height: 900px;
   
@@ -33,18 +33,17 @@ nav ul {
 }
 nav {
   padding: 0.5rem 0;
+  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-   background-color: transparent; 
+  background-color: transparent; 
   width: 100%;
-}
-.show{
-  background-color: #fff;
   position: fixed;
   top: 0;
   z-index:1000;
 }
+
 .col {
   color: black;
 }
@@ -52,12 +51,9 @@ nav a {
   text-decoration: none;
   color: white;
 }
-
-.overlay {
-  background-color: black;
-  width: 100%;
-  height: 900px;
-  opacity: 0.8;
+nav a:hover{
+ color: rgba(126, 252, 0, 0.308);
+ transition:  all 1s ease-in-out;
 }
 header div {
   padding: 10rem 0;
@@ -124,6 +120,7 @@ header p {
   color: white;
   font-size: 1rem;
   font-weight: 300;
+  cursor: pointer;
 }
 .section1 .grids {
   width: 80%;
@@ -368,25 +365,21 @@ header p {
 /* Section5 styling begins */
 .section5 {
    width: 90%;
-  /* height: 100vh;  */
   margin: auto;
   padding-top: 5rem;
 }
 .section5 h1 {
-  margin: 4rem auto;
   font-size: 2rem;
   font-weight: 300;
   text-align: center;
 }
 .section5 h2 {
-  padding: 0.5rem 0;
   font-size: 1rem;
   font-weight: 300;
 }
 .section5 p {
   font-size: 1.2rem;
   font-weight: 100;
-  padding: 0 1rem;
   text-align: center;
 }
 .section5 span {
@@ -398,8 +391,8 @@ header p {
   background-color: rgba(126, 252, 0, 0.308);
   color: black;
   font-size: 2rem;
-  padding: 1rem;
-  border-radius: 5rem;
+  padding: 0.8rem;
+  border-radius: 3rem;
 }
 .section5 .flexitems {
   display: flex;
@@ -501,9 +494,6 @@ header p {
   font-weight: 700;
   font-family: "Roboto", sans-serif;
 }
-.section7 .container #h2{
- 
-}
 .section7 .container {
   display: flex;
   justify-content: center;
@@ -514,7 +504,6 @@ header p {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* flex-wrap: wrap; */
   width: 100%;
   gap: 1rem;
 }
@@ -553,7 +542,7 @@ footer {
   text-align: center;
 }
 footer p {
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: 100;
 }
 footer div {
@@ -566,11 +555,11 @@ footer div {
   gap: 1rem;
 }
 footer .uil {
-  font-size: 2rem;
+  font-size: 1.5rem;
   background-color: rgba(128, 128, 128, 0.144);
   color: rgba(126, 252, 0, 0.308);
   border-radius: 1rem;
-  padding: 0.8rem;
+  padding: 0.5rem;
 }
 /* footer styling ends */
 
